examples/modules/expected/0785-modules-qualified-generic-static-missing-member.stderr
error: namespace 'a' has no member 'Box'
  --> examples/modules/0785-modules-qualified-generic-static-missing-member.sx:16:10
   |
16 |     x := a.Box(i64).make(7);
   |          ^^^^^
